feat(28): Implement basic project structure with controller, service, and repository for project management

--- a/sidequest-backend/.gitignore
+++ b/sidequest-backend/.gitignore
@@ -31,3 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Ignora o arquivo de configuração sensível do Spring Boot
+sidequest-backend/src/main/resources/application.properties
