feat-21-18-functional-login-and-signup

--- a/sidequest-backend/src/main/resources/application.properties
+++ b/sidequest-backend/src/main/resources/application.properties
@@ -1,5 +1,22 @@
 spring.application.name=sidequest-backend
 
+# MongoDB Configuration
 spring.data.mongodb.uri=mongodb+srv://syntax:fatec123@syntax-bd.vulmuug.mongodb.net/syntaxbd?retryWrites=true&w=majority&appName=syntaxbd
 spring.data.mongodb.database=syntaxbd
+
+# JWT Configuration
+jwt.secret=minhaCh4v3S3cr3t4JWT9876543210ABCDEFGHIJKLMNOPQRSTUVWXYZ
+jwt.expiration=86400000
+
+# Google OAuth2 Configuration
+spring.security.oauth2.client.registration.google.client-id=YOUR_GOOGLE_CLIENT_ID
+spring.security.oauth2.client.registration.google.client-secret=YOUR_GOOGLE_CLIENT_SECRET
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://www.googleapis.com/oauth2/v3/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+# CORS Configuration
+app.cors.allowed-origins=http://localhost:3000,http://localhost:8080
 
