feat-21-18-functional-login-and-signup

--- a/sidequest-backend/src/main/resources/application.properties
+++ b/sidequest-backend/src/main/resources/application.properties
@@ -9,8 +9,8 @@ jwt.secret=minhaCh4v3S3cr3t4JWT9876543210ABCDEFGHIJKLMNOPQRSTUVWXYZ
 jwt.expiration=86400000
 
 # Google OAuth2 Configuration
-spring.security.oauth2.client.registration.google.client-id=YOUR_GOOGLE_CLIENT_ID
-spring.security.oauth2.client.registration.google.client-secret=YOUR_GOOGLE_CLIENT_SECRET
+spring.security.oauth2.client.registration.google.client-id=643140173132-ibkqupgngvglrflj6v9ua4nhbdnlfl2s.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://www.googleapis.com/oauth2/v3/token
@@ -18,5 +18,10 @@ spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleap
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
 # CORS Configuration
-app.cors.allowed-origins=http://localhost:3000,http://localhost:8080
+app.cors.allowed-origins=http://localhost:5173,http://localhost:8080
+
+# Logging Configuration
+logging.level.com.syntax.sidequest_backend=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
 
