--- a/sidequest-backend/src/main/resources/application.properties
+++ b/sidequest-backend/src/main/resources/application.properties
@@ -20,6 +20,19 @@ spring.security.oauth2.client.provider.google.user-name-attribute=sub
 # CORS Configuration
 app.cors.allowed-origins=http://localhost:5173,http://localhost:8080
 
+# Email Configuration (Gmail SMTP)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME:}
+spring.mail.password=${EMAIL_PASSWORD:}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+# Frontend URL
+app.frontend.url=http://localhost:5173
+
 # Logging Configuration
 logging.level.com.syntax.sidequest_backend=DEBUG
 logging.level.org.springframework.web=DEBUG
