feat-21-18-functional-login-and-signup

--- a/sidequest-backend/src/main/resources/application.properties
+++ b/sidequest-backend/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=sidequest-backend
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb+srv://syntax:fatec123@syntax-bd.vulmuug.mongodb.net/syntaxbd?retryWrites=true&w=majority&appName=syntaxbd
+spring.data.mongodb.uri=YOUR_MONGODB_URI_HERE
 spring.data.mongodb.database=syntaxbd
 
 # JWT Configuration
-jwt.secret=minhaCh4v3S3cr3t4JWT9876543210ABCDEFGHIJKLMNOPQRSTUVWXYZ
+jwt.secret=YOUR_JWT_SECRET_KEY_HERE
 jwt.expiration=86400000
 
 # Google OAuth2 Configuration
-spring.security.oauth2.client.registration.google.client-id=643140173132-ibkqupgngvglrflj6v9ua4nhbdnlfl2s.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=YOUR_GOOGLE_CLIENT_ID_HERE
+spring.security.oauth2.client.registration.google.client-secret=YOUR_GOOGLE_CLIENT_SECRET_HERE
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://www.googleapis.com/oauth2/v3/token
