feat-21-18-functional-login-and-signup: remove sensitive data

--- a/sidequest-backend/.gitignore
+++ b/sidequest-backend/.gitignore
@@ -34,3 +34,4 @@ build/
 
 # Ignora o arquivo de configuração sensível do Spring Boot
 sidequest-backend/src/main/resources/application.properties
+src/main/resources/application.properties
