feat(65) applying GridFS to the database due to increase data size

--- a/sidequest-backend/src/main/resources/application.properties
+++ b/sidequest-backend/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 spring.application.name=sidequest-backend
 
+# MongoDB Atlas
 spring.data.mongodb.uri=mongodb+srv://syntax:fatec123@syntax-bd.vulmuug.mongodb.net/syntaxbd?retryWrites=true&w=majority&appName=syntaxbd
 spring.data.mongodb.database=syntaxbd
 
+# GridFS (usa o mesmo banco)
+spring.data.mongodb.gridfs.database=syntaxbd
+spring.data.mongodb.gridfs.bucket=fs
+
+# Upload de arquivos (50MB máximo)
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.enabled=true
