--- a/projetos-service/src/main/resources/application.properties
+++ b/projetos-service/src/main/resources/application.properties
@@ -1,2 +1,21 @@
-spring.application.name=projetos-service
 server.port=8083
+spring.application.name=projetos-service
+
+# MongoDB - Mesma conexão do monólito
+spring.data.mongodb.uri=mongodb+srv://syntax:fatec123@syntax-bd.vulmuug.mongodb.net/syntaxbd?retryWrites=true&w=majority&appName=syntaxbd
+spring.data.mongodb.database=syntaxbd
+
+# URLs dos outros microserviços
+usuario.service.url=http://localhost:8082
+tarefas.service.url=http://localhost:8084
+
+# CORS
+cors.allowed-origins=http://localhost:5173,http://localhost:8080
+
+# Swagger/OpenAPI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.packages-to-scan=com.syntax.projetos_service.controller
