feat(65) finish anexo-service folder with ready API functioning on Insomnia perfectly

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -12,7 +12,7 @@ server.port=8080
 microservices.usuario.url=http://localhost:8082
 microservices.projetos.url=http://localhost:8083
 microservices.tarefas.url=http://localhost:8084
-
+microservices.anexos.url=http://localhost:8085
 # ====================================
 # JWT CONFIGURATION
 # ====================================
@@ -61,13 +61,34 @@ management.health.circuitbreakers.enabled=true
 management.health.ratelimiters.enabled=true
 
 # ====================================
-# SWAGGER/OPENAPI
+# SWAGGER/OPENAPI - CONFIGURAÇÃO COMPLETA
 # ====================================
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
+# Habilita documentação OpenAPI
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+
+# Configuração da UI do Swagger
 springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
+
+# IMPORTANTE: Configurações para exibir o botão Authorize
+springdoc.swagger-ui.persistAuthorization=true
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.tryItOutEnabled=true
+
+# Desabilita CSRF para facilitar testes no Swagger
+springdoc.swagger-ui.csrf.enabled=false
+
+# Configuração de grupos (opcional - descomente se necessário)
+# springdoc.group-configs[0].group=usuarios
+# springdoc.group-configs[0].paths-to-match=/usuarios/**
+# springdoc.group-configs[1].group=projetos
+# springdoc.group-configs[1].paths-to-match=/projetos/**
+# springdoc.group-configs[2].group=tarefas
+# springdoc.group-configs[2].paths-to-match=/tarefas/**
 
 # ====================================
 # LOGGING
@@ -75,4 +96,5 @@ springdoc.swagger-ui.tagsSorter=alpha
 logging.level.root=INFO
 logging.level.com.syntax.api_gateway=DEBUG
 logging.level.org.springframework.cloud.gateway=DEBUG
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.level.org.springdoc=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
