--- a/sidequest-backend/src/main/resources/application.properties
+++ b/sidequest-backend/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.application.name=sidequest-backend
 
+server.port=8086
+
 spring.data.mongodb.uri=mongodb+srv://syntax:fatec123@syntax-bd.vulmuug.mongodb.net/syntaxbd?retryWrites=true&w=majority&appName=syntaxbd
 spring.data.mongodb.database=syntaxbd
 
+spring.main.allow-bean-definition-overriding=true
+
+logging.level.org.springframework=INFO
+logging.level.org.mongodb.driver=INFO
