--- a/tarefas-service/src/main/resources/application.properties
+++ b/tarefas-service/src/main/resources/application.properties
@@ -1,16 +1,17 @@
+# Porta e nome da aplicação
 server.port=8084
 spring.application.name=tarefas-service
 
-# MongoDB - Mesma conexão do monólito
+# MongoDB
 spring.data.mongodb.uri=mongodb+srv://syntax:fatec123@syntax-bd.vulmuug.mongodb.net/syntaxbd?retryWrites=true&w=majority&appName=syntaxbd
 spring.data.mongodb.database=syntaxbd
 
-# URLs dos outros microserviços
-usuario.service.url=http://localhost:8082
-projetos.service.url=http://localhost:8083
+# URLs dos outros microserviços - USAR API GATEWAY
+usuario.service.url=http://localhost:8080
+projetos.service.url=http://localhost:8080
 
 # CORS
-cors.allowed-origins=http://localhost:5173,http://localhost:8080
+cors.allowed-origins=http://localhost:5173
 
 # Swagger/OpenAPI Configuration
 springdoc.api-docs.path=/api-docs
@@ -19,3 +20,10 @@ springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.packages-to-scan=com.syntax.tarefas_service.controller
+
+# Forçar Swagger a usar a porta do serviço local (8084)
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.server-url=http://localhost:8084
+
+# Secret do Gateway para comunicação entre microserviços
+gateway.secret=SideQuestGatewaySecret2024
