--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,11 @@
 {
-    "java.compile.nullAnalysis.mode": "automatic",
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "java.compile.nullAnalysis.mode": "disabled",
+    "java.configuration.updateBuildConfiguration": "interactive",
+    "java.errors.incompleteClasspath.severity": "ignore",
+    "java.diagnostics.onUnusedDeclarations": "ignore",
+    "java.diagnostics.onNonExpressiveCode": "ignore",
+    "java.spring.boot.validation.version.enabled": false,
+    "problems.decorations.enabled": false,
+    "java.format.enable": true,
+    "java.sources.organizeImports.onSave": false
 }
