feat(80): Completing the backend and frontend connection and refactoring.

--- a/tarefas-service/src/main/resources/application.properties
+++ b/tarefas-service/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.data.mongodb.database=syntaxbd
 usuario.service.url=http://localhost:8082
 projetos.service.url=http://localhost:8083
 
+# Gateway Secret para autenticação entre microserviços
+gateway.secret=SideQuestGatewaySecret2024
+
 # CORS
 cors.allowed-origins=http://localhost:5173,http://localhost:8080
 
@@ -19,3 +22,10 @@ springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.packages-to-scan=com.syntax.tarefas_service.controller
+
+# Actuator
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
+
+# Não mapear recursos estáticos (evita logs de erro para health checks externos)
+spring.web.resources.add-mappings=false
