--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -75,4 +75,6 @@ springdoc.swagger-ui.tagsSorter=alpha
 logging.level.root=INFO
 logging.level.com.syntax.api_gateway=DEBUG
 logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.org.springframework.web.reactive.function.client=DEBUG
+logging.level.reactor.netty.http.client=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
