--- a/tarefas-service/pom.xml
+++ b/tarefas-service/pom.xml
@@ -44,6 +44,12 @@
 			<version>2.7.0</version>
 		</dependency>
 
+		<!-- Spring Boot Actuator -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
