feat(84): The logic for the notifications page has been implemented.

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -12,6 +12,7 @@ server.port=8080
 microservices.usuario.url=http://localhost:8082
 microservices.projetos.url=http://localhost:8083
 microservices.tarefas.url=http://localhost:8084
+microservices.avisos.url=http://localhost:8085
 
 # ====================================
 # JWT CONFIGURATION
