--- a/projetos-service/src/main/resources/application.properties
+++ b/projetos-service/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.data.mongodb.database=syntaxbd
 # URLs dos outros microserviços
 usuario.service.url=http://localhost:8082
 tarefas.service.url=http://localhost:8084
+avisos.service.url=http://localhost:8085
 
 # Gateway Secret para comunicação entre serviços
 gateway.secret=SideQuestGatewaySecret2024
