--- a/tarefas-service/src/main/resources/application.properties
+++ b/tarefas-service/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.data.mongodb.database=syntaxbd
 # URLs dos outros microserviços
 usuario.service.url=http://localhost:8082
 projetos.service.url=http://localhost:8083
+avisos.service.url=http://localhost:8085
 
 # Gateway Secret para autenticação entre microserviços
 gateway.secret=SideQuestGatewaySecret2024
